--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,5 +11,6 @@ jobs:
         with:
           who-to-greet: 'Siarhei'
       # Use the output from the `hello` step
-      - name: Get the output time
+      - name: Build Writerside docs using Docker
+        uses: JetBrains/writerside-github-action@v1
         run: echo "The time was ${{ steps.hello.outputs.time }}"
