--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,7 +7,7 @@ on:
   workflow_dispatch:
 
 env:
-  PRODUCT: module/instance-id
+  PRODUCT: help-module/t
   ARTIFACT: webHelpT2-all.zip
 
 jobs:
@@ -17,7 +17,7 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v3
       - name: Build Writerside docs with docker
-        uses: JetBrains/writerside-github-action@v1
+        uses: JetBrains/writerside-github-action@v2
       - name: Upload artifact
         uses: actions/upload-artifact@v3
         with:
