--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -2,10 +2,10 @@ name: Build docs
 
 on:
   push:
-    branches: ["master", "docs"]
+    branches: ["main"]
+
   workflow_dispatch:
 
-# Gives the workflow permissions to clone the repo and create a page deployment
 permissions:
   id-token: write
   pages: write
@@ -13,8 +13,7 @@ permissions:
 env:
   PRODUCT: Writerside/m
   DOC_ARTIFACT: webHelpM2-all.zip
-  CONFIG_JSON_PRODUCT: m
-  CONFIG_JSON_VERSION: master
+  DOCKER_IMAGE: registry.jetbrains.team/p/writerside/builder/writerside-builder:2.1.1463-p3799
 
 jobs:
   build-job:
@@ -22,37 +21,20 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
-      - name: Build Writerside docs using Docker
-        uses: JetBrains/writerside-github-action@v3
+
+      - name: Set Docker build args
+        run: echo "DOCKER_IMAGE=${{ env.DOCKER_IMAGE }}" >> $GITHUB_ENV
+
+      - name: Build docs with Docker
+        uses: siarb/writerside-docker-action@v1.92
+        with:
+          DOCKER: ${{ env.DOCKER_IMAGE }}
+          DOCKERFILE: <Dockerfile-path>
+          ENTRYPOINT: entrypoint.sh
+
       - name: Upload documentation
         uses: actions/upload-artifact@v3
         with:
           name: help
-          path: artifacts/${{ env.DOC_ARTIFACT }}
+          path: ${env.DOC_ARTIFACT}
           retention-days: 7
-
-  deploy:
-    environment:
-      name: github-pages
-      url: ${{ steps.deployment.outputs.page_url }}
-    # Requires the build-job results
-    needs: build-job
-    runs-on: ubuntu-latest
-    steps:
-      - name: Download artifact
-        uses: actions/download-artifact@v3
-        with:
-          name: help
-      - name: Unzip artifact
-        uses: montudor/action-zip@v1
-        with:
-          args: unzip -qq ${{ env.DOC_ARTIFACT }} -d dir
-      - name: Setup Pages
-        uses: actions/configure-pages@v2
-      - name: Upload artifact
-        uses: actions/upload-pages-artifact@v1
-        with:
-          path: dir
-      - name: Deploy to GitHub Pages
-        id: deployment
-        uses: actions/deploy-pages@v1
