--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -13,7 +13,7 @@ permissions:
 
 env:
   PRODUCT: Writerside/m
-  DOC_ARTIFACT: webHelpM2-all.zip
+  ARTIFACT: webHelpM2-all.zip
 
 jobs:
   build-job:
@@ -34,7 +34,7 @@ jobs:
         uses: actions/upload-artifact@v3
         with:
           name: help
-          path: artifacts/${{ env.DOC_ARTIFACT }}
+          path: artifacts/${{ env.ARTIFACT }}
           retention-days: 7
 
   deploy:
@@ -52,7 +52,7 @@ jobs:
       - name: Unzip artifact
         uses: montudor/action-zip@v1
         with:
-          args: unzip -qq ${{ env.DOC_ARTIFACT }} -d dir
+          args: unzip -qq ${{ env.ARTIFACT }} -d dir
       - name: Setup Pages
         uses: actions/configure-pages@v2
       - name: Upload artifact
