--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -1,30 +1,33 @@
 name: Build documentation
 
 on:
+  # If specified, the workflow will be triggered automatically once you push to the `main` branch.
+  # Replace `main` with your branch’s name
   push:
     branches: ["main"]
+
   # Specify to run a workflow manually from the Actions tab on GitHub
   workflow_dispatch:
 
-# Gives the workflow permissions to clone the repo and create a page deployment
-permissions:
-  id-token: write
-  pages: write
-
 env:
+  # Name of module and id separated by a slash
   INSTANCE: Writerside/m
+  # Replace HI with the ID of the instance in capital letters
   ARTIFACT: webHelpM2-all.zip
-  DOCKER_VERSION: 2.1.1501-p3929
+  # Writerside docker image version
+  DOCKER_VERSION: 2.1.1479-p3869
+  # Add the variable below to upload Algolia indexes
+  # Replace HI with the ID of the instance in capital letters
+  ALGOLIA_ARTIFACT: algolia-indexes-M.zip
 
 jobs:
   build:
     runs-on: ubuntu-latest
-
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
 
-      - name: Build docs with Docker image
+      - name: Build Writerside docs using Docker
         uses: JetBrains/writerside-github-action@v4
         with:
           instance: ${{ env.INSTANCE }}
@@ -36,9 +39,20 @@ jobs:
         with:
           name: docs
           path: |
-            artifacts/${{ env.ARTIFACT }}
-            artifacts/report.json
+                  artifacts/${{ env.ARTIFACT }}
+            # Add this artifact upload action to use it in a test job
+                  artifacts/report.json
+          retention-days: 7
 
+      # Add the step below to upload Algolia indexes
+      - name: Upload algolia-indexes
+        uses: actions/upload-artifact@v3
+        with:
+          name: algolia-indexes
+          path: artifacts/${{ env.ALGOLIA_ARTIFACT }}
+          retention-days: 7
+
+  # Add the job below if you want to fail the build when documentation contains errors
   test:
     # Requires build job results
     needs: build
@@ -55,34 +69,3 @@ jobs:
         uses: JetBrains/writerside-checker-action@v1
         with:
           instance: ${{ env.INSTANCE }}
-
-  deploy:
-    environment:
-      name: github-pages
-      url: ${{ steps.deployment.outputs.page_url }}
-    # Requires the test job to complete successfully
-    needs: test
-    runs-on: ubuntu-latest
-
-    steps:
-      - name: Download artifact
-        uses: actions/download-artifact@v3
-        with:
-          name: docs
-
-      - name: Unzip artifact
-        uses: montudor/action-zip@v1
-        with:
-          args: unzip -qq ${{ env.ARTIFACT }} -d dir
-
-      - name: Setup Pages
-        uses: actions/configure-pages@v2
-
-      - name: Upload artifact
-        uses: actions/upload-pages-artifact@v1
-        with:
-          path: dir
-
-      - name: Deploy to GitHub Pages
-        id: deployment
-        uses: actions/deploy-pages@v1
