--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -1,6 +1,8 @@
 name: Build documentation
 
 on:
+  # If specified, the workflow will be triggered automatically once you push to the `main` branch.
+  # Replace `main` with your branch’s name
   push:
     branches: ["main"]
   # Specify to run a workflow manually from the Actions tab on GitHub
@@ -12,9 +14,15 @@ permissions:
   pages: write
 
 env:
+  # Name of module and id separated by a slash
   INSTANCE: Writerside/m
+  # Replace HI with the ID of the instance in capital letters
   ARTIFACT: webHelpM2-all.zip
+  # Writerside docker image version
   DOCKER_VERSION: 2.1.1479-p3869
+  # Add the variable below to upload Algolia indexes
+  # Replace HI with the ID of the instance in capital letters
+  ALGOLIA_ARTIFACT: algolia-indexes-HI.zip
 
 jobs:
   build:
@@ -24,7 +32,7 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v3
 
-      - name: Build docs with Docker image
+      - name: Build Writerside docs using Docker
         uses: JetBrains/writerside-github-action@v4
         with:
           instance: ${{ env.INSTANCE }}
@@ -38,7 +46,17 @@ jobs:
           path: |
             artifacts/${{ env.ARTIFACT }}
             artifacts/report.json
+          retention-days: 7
 
+      # Add the step below to upload Algolia indexes
+      - name: Upload algolia-indexes
+        uses: actions/upload-artifact@v3
+        with:
+          name: algolia-indexes
+          path: artifacts/${{ env.ALGOLIA_ARTIFACT }}
+          retention-days: 7
+
+  # Add the job below and artifacts/report.json on Upload documentation step above if you want to fail the build when documentation contains errors
   test:
     # Requires build job results
     needs: build
@@ -60,10 +78,9 @@ jobs:
     environment:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
-    # Requires the test job to complete successfully
+    # Requires the build job results
     needs: test
     runs-on: ubuntu-latest
-
     steps:
       - name: Download artifact
         uses: actions/download-artifact@v3
