--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -9,20 +9,25 @@ on:
   workflow_dispatch:
 
 # Gives the workflow permissions to clone the repo and create a page deployment
-#permissions:
-#  id-token: write
-#  pages: write
+permissions:
+  id-token: write
+  pages: write
 
 env:
   # Name of module and id separated by a slash
-  INSTANCE: Writerside/m
+  INSTANCE: Writerside/t
   # Replace HI with the ID of the instance in capital letters
-  ARTIFACT: webHelpM2-all.zip
+  ARTIFACT: webHelpT2-all.zip
   # Writerside docker image version
-  DOCKER_VERSION: 232.10165.1
+  DOCKER_VERSION: 2.1.1611-p4551
   # Add the variable below to upload Algolia indexes
   # Replace HI with the ID of the instance in capital letters
-  ALGOLIA_ARTIFACT: algolia-indexes-HI.zip
+  ALGOLIA_ARTIFACT: algolia-indexes-T.zip
+  ALGOLIA_APP_NAME: ERUSDW4898
+  ALGOLIA_INDEX_NAME: index
+  ALGOLIA_KEY: ${{ secrets.ALGOLIA_KEY }}
+  CONFIG_JSON_PRODUCT: t
+  CONFIG_JSON_VERSION: 1.0
 
 jobs:
   build:
@@ -39,79 +44,92 @@ jobs:
           artifact: ${{ env.ARTIFACT }}
           docker-version: ${{ env.DOCKER_VERSION }}
 
-#      - name: Upload documentation
-#        uses: actions/upload-artifact@v3
-#        with:
-#          name: docs
-#          path: |
-#            artifacts/${{ env.ARTIFACT }}
-#            artifacts/report.json
-#          retention-days: 7
+      - name: Upload documentation
+        uses: actions/upload-artifact@v3
+        with:
+          name: docs
+          path: |
+            artifacts/${{ env.ARTIFACT }}
+            artifacts/report.json
+          retention-days: 7
 
       # Add the step below to upload Algolia indexes
-#      - name: Upload algolia-indexes
-#        uses: actions/upload-artifact@v3
-#        with:
-#          name: algolia-indexes
-#          path: artifacts/${{ env.ALGOLIA_ARTIFACT }}
-#          retention-days: 7
+      - name: Upload algolia-indexes
+        uses: actions/upload-artifact@v3
+        with:
+          name: algolia-indexes
+          path: artifacts/${{ env.ALGOLIA_ARTIFACT }}
+          retention-days: 7
 
   # Add the job below and artifacts/report.json on Upload documentation step above if you want to fail the build when documentation contains errors
-#  test:
+  test:
     # Requires build job results
-#    needs: build
-#    runs-on: ubuntu-latest
-#
-#    steps:
-#      - name: Download artifacts
-#        uses: actions/download-artifact@v1
-#        with:
-#          name: docs
-#          path: artifacts
-#
-#      - name: Test documentation
-#        uses: JetBrains/writerside-checker-action@v1
-#        with:
-#          instance: ${{ env.INSTANCE }}
+    needs: build
+    runs-on: ubuntu-latest
 
-#  deploy:
-#    environment:
-#      name: github-pages
-#      url: ${{ steps.deployment.outputs.page_url }}
-    # Requires the build job results
-#    needs: test
-#    runs-on: ubuntu-latest
-#    steps:
-#      - name: Download artifact
-#        uses: actions/download-artifact@v3
-#        with:
-#          name: docs
-
-#      - name: Unzip artifact
-#        uses: montudor/action-zip@v1
-#        with:
-#          args: unzip -qq ${{ env.ARTIFACT }} -d dir
-
-      - name: Extract Files
-        run: 7z x artifacts/${{ env.ARTIFACT }} -odir
-
-      - name: Replace Text
-        run: |
-          # Set primary color of website to Flyte Pink
-          find dir/ -type f -exec sed -i 's/#DE3358/#F37BDA/g' {} +
-          # Remove the
-#      - name: Deploy to Cloudflare Pages
-#        uses: cloudflare/pages@main
-#        with:
-#          apiToken: ${{ secrets.CLOUDFLARE_API_TOKEN }}
-
-      - name: Publish to Cloudflare Pages
-        uses: cloudflare/pages-action@v1
+    steps:
+      - name: Download artifacts
+        uses: actions/download-artifact@v1
         with:
-          apiToken: ${{ secrets.CLOUDFLARE_API_TOKEN }}
-          accountId: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
-          projectName: siarhei
-          directory: dir
-          branch: main
-          # Optional: Change the Wrangler version, allows you to point to a specific version or a tag such as `beta`
-          wranglerVersion: '3'
+          name: docs
+          path: artifacts
+
+      - name: Test documentation
+        uses: JetBrains/writerside-checker-action@v1
+        with:
+          instance: ${{ env.INSTANCE }}
+
+  publish-indexes:
+    # Requires the build-job results
+    needs: build
+    runs-on: ubuntu-latest
+    container:
+      image: registry.jetbrains.team/p/writerside/builder/algolia-publisher:2.0.32-2
+
+    steps:
+      - uses: actions/checkout@v3
+      - uses: actions/download-artifact@v3
+        with:
+          name: algolia-indexes
+      - uses: montudor/action-zip@v1
+        with:
+          args: unzip -qq ${{ env.ALGOLIA_ARTIFACT }} -d algolia-indexes
+      - run: |
+          env "algolia-key=${{env.ALGOLIA_KEY}}" java -jar /opt/builder/help-publication-agent.jar \
+          update-index \
+          --application-name ${{env.ALGOLIA_APP_NAME}} \
+          --index-name ${{env.ALGOLIA_INDEX_NAME}} \
+          --product ${{env.CONFIG_JSON_PRODUCT}} \
+          --version ${{env.CONFIG_JSON_VERSION}} \
+          --index-directory algolia-indexes/ \
+          2>&1 | tee algolia-update-index-log.txt
+
+  deploy:
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
+    # Requires the build job results
+    needs: build
+    runs-on: ubuntu-latest
+    steps:
+      - name: Download artifact
+        uses: actions/download-artifact@v3
+        with:
+          name: docs
+
+      - name: Unzip artifact
+        uses: montudor/action-zip@v1
+        with:
+          args: unzip -qq ${{ env.ARTIFACT }} -d dir
+
+      - name: Setup Pages
+        uses: actions/configure-pages@v2
+
+      - name: Upload artifact
+        uses: actions/upload-pages-artifact@v1
+        with:
+          path: dir
+
+      - name: Deploy to GitHub Pages
+        id: deployment
+        uses: actions/deploy-pages@v1
