--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,6 +22,7 @@ env:
   DOCKER_VERSION: 2.1.1616-p4584
   # Add the variable below to upload Algolia indexes
   # Replace HI with the ID of the instance in capital letters
+  ALGOLIA_ARTIFACT: algolia-indexes-T.zip
   ALGOLIA_APP_NAME: ERUSDW4898
   ALGOLIA_INDEX_NAME: index
   ALGOLIA_KEY: ${{ secrets.ALGOLIA_KEY }}
