--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -91,10 +91,8 @@ jobs:
       - uses: actions/download-artifact@v3
         with:
           name: algolia-indexes
-      - uses: montudor/action-zip@v1
-        with:
-          args: unzip -qq ${{ env.ALGOLIA_ARTIFACT }} -d algolia-indexes
-      - run: |
+        run: |
+          unzip -O UTF-8 -qq ${{ env.ALGOLIA_ARTIFACT }} -d algolia-indexes
           env "algolia-key=${{env.ALGOLIA_KEY}}" java -jar /opt/builder/help-publication-agent.jar \
           update-index \
           --application-name ${{env.ALGOLIA_APP_NAME}} \
@@ -118,9 +116,8 @@ jobs:
           name: docs
 
       - name: Unzip artifact
-        uses: montudor/action-zip@v1
-        with:
-          args: unzip -qq ${{ env.ARTIFACT }} -d dir
+        run: |
+          unzip -O UTF-8 -qq ${{ env.ARTIFACT }} -d dir
 
       - name: Setup Pages
         uses: actions/configure-pages@v2
