--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -84,13 +84,15 @@ jobs:
     needs: build
     runs-on: ubuntu-latest
     container:
-      image: registry.jetbrains.team/p/writerside/builder/algolia-publisher:2.0.32-2
+      image: registry.jetbrains.team/p/writerside/builder/algolia-publisher:2.0.32-3
 
     steps:
-      - uses: actions/checkout@v3
-      - uses: actions/download-artifact@v3
+      - name: Download artifact
+        uses: actions/download-artifact@v3
         with:
           name: algolia-indexes
+
+      - name: Unzip artifact
         run: |
           unzip -O UTF-8 -qq ${{ env.ALGOLIA_ARTIFACT }} -d algolia-indexes
           env "algolia-key=${{env.ALGOLIA_KEY}}" java -jar /opt/builder/help-publication-agent.jar \
