--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -15,18 +15,18 @@ permissions:
 
 env:
   # Name of module and id separated by a slash
-  INSTANCE: Writerside/t
+  INSTANCE: Writerside/product-api
   # Replace HI with the ID of the instance in capital letters
-  ARTIFACT: webHelpT2-all.zip
+  ARTIFACT: webHelpPRODUCT-API2-all.zip
   # Writerside docker image version
   DOCKER_VERSION: 2.1.1620-p4608
   # Add the variable below to upload Algolia indexes
   # Replace HI with the ID of the instance in capital letters
-  ALGOLIA_ARTIFACT: algolia-indexes-T.zip
+  ALGOLIA_ARTIFACT: algolia-indexes-PRODUCT-API.zip
   ALGOLIA_APP_NAME: ERUSDW4898
   ALGOLIA_INDEX_NAME: index
   ALGOLIA_KEY: ${{ secrets.ALGOLIA_KEY }}
-  CONFIG_JSON_PRODUCT: t
+  CONFIG_JSON_PRODUCT: product-api
   CONFIG_JSON_VERSION: 1.0
 
 jobs:
