--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -15,7 +15,7 @@ permissions:
 
 env:
   # Name of module and id separated by a slash
-  INSTANCE: Writerside/product-api
+  INSTANCE: 1/2/3/product-api
   # Replace HI with the ID of the instance in capital letters
   ARTIFACT: webHelpPRODUCT-API2-all.zip
   # Writerside docker image version
