--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -15,18 +15,18 @@ permissions:
 
 env:
   # Name of module and id separated by a slash
-  INSTANCE: 1/2/3/product-api
+  INSTANCE: Writerside/РуИ
   # Replace HI with the ID of the instance in capital letters
-  ARTIFACT: webHelpPRODUCT-API2-all.zip
+  ARTIFACT: webHelpРУИ2-all.zip
   # Writerside docker image version
-  DOCKER_VERSION: 2.1.1620-p4608
+  DOCKER_VERSION: 2.1.1623-p4623
   # Add the variable below to upload Algolia indexes
   # Replace HI with the ID of the instance in capital letters
-  ALGOLIA_ARTIFACT: algolia-indexes-PRODUCT-API.zip
+  ALGOLIA_ARTIFACT: algolia-indexes-РУИ.zip
   ALGOLIA_APP_NAME: ERUSDW4898
   ALGOLIA_INDEX_NAME: index
   ALGOLIA_KEY: ${{ secrets.ALGOLIA_KEY }}
-  CONFIG_JSON_PRODUCT: product-api
+  CONFIG_JSON_PRODUCT: РуИ
   CONFIG_JSON_VERSION: 1.0
 
 jobs:
