--- a/Writerside/writerside.cfg
+++ b/Writerside/writerside.cfg
@@ -6,5 +6,5 @@
     <images dir="images" web-path="schier-api-documentation"/>
     <categories src="c.list"/>
     <vars src="v.list"/>
-    <instance src="product-api.tree"/>
+    <instance src="РуИ.tree"/>
 </ihp>
