--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -15,18 +15,18 @@ permissions:
 
 env:
   # Name of module and id separated by a slash
-  INSTANCE: Writerside/РуИ
+  INSTANCE: Writerside2/m
   # Replace HI with the ID of the instance in capital letters
-  ARTIFACT: webHelpРУИ2-all.zip
+  ARTIFACT: webHelpM2-all.zip
   # Writerside docker image version
-  DOCKER_VERSION: 2.1.1623-p4623
+  DOCKER_VERSION: 232.10165.1
   # Add the variable below to upload Algolia indexes
   # Replace HI with the ID of the instance in capital letters
-  ALGOLIA_ARTIFACT: algolia-indexes-РУИ.zip
+  ALGOLIA_ARTIFACT: algolia-indexes-M.zip
   ALGOLIA_APP_NAME: ERUSDW4898
   ALGOLIA_INDEX_NAME: index
   ALGOLIA_KEY: ${{ secrets.ALGOLIA_KEY }}
-  CONFIG_JSON_PRODUCT: РуИ
+  CONFIG_JSON_PRODUCT: m
   CONFIG_JSON_VERSION: 1.0
 
 jobs:
