--- a/Writerside/writerside.cfg
+++ b/Writerside/writerside.cfg
@@ -2,6 +2,9 @@
 <!DOCTYPE ihp SYSTEM "https://resources.jetbrains.com/writerside/1.0/ihp.dtd">
 
 <ihp version="2.0">
+    <settings>
+        <id-generator-method>LOWER_CASE_DASHES_INTERNATIONAL</id-generator-method>
+    </settings>
     <topics dir="topics" web-path="topics"/>
     <images dir="images" web-path="schier-api-documentation"/>
     <categories src="c.list"/>
