--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -44,6 +44,11 @@ jobs:
           artifact: ${{ env.ARTIFACT }}
           docker-version: ${{ env.DOCKER_VERSION }}
 
+      - name: Create file and list directory
+        run: |
+          touch ./artifacts/some-file
+          ls -alR ./artifacts
+
       - name: Upload documentation
         uses: actions/upload-artifact@v3
         with:
