Test api indexes

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -26,8 +26,8 @@ env:
   ALGOLIA_APP_NAME: ERUSDW4898
   ALGOLIA_INDEX_NAME: index
   ALGOLIA_KEY: ${{ secrets.ALGOLIA_KEY }}
-  CONFIG_JSON_PRODUCT: m
-  CONFIG_JSON_VERSION: 1.0
+  CONFIG_JSON_PRODUCT: auto
+  CONFIG_JSON_VERSION: 1
 
 jobs:
   build:
