--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -19,7 +19,7 @@ env:
   # Replace HI with the ID of the instance in capital letters
   ARTIFACT: webHelpAUTO2-all.zip
   # Writerside docker image version
-  DOCKER_VERSION: 2.1.1698-p4960
+  DOCKER_VERSION: 2.1.1706-p5137
   # Add the variable below to upload Algolia indexes
   # Replace HI with the ID of the instance in capital letters
   ALGOLIA_ARTIFACT: algolia-indexes-AUTO.zip
@@ -32,21 +32,31 @@ env:
 jobs:
   build:
     runs-on: ubuntu-latest
+    container: registry.jetbrains.team/p/writerside/builder/writerside-builder:2.1.1706-p5137
 
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
 
       - name: Build Writerside docs using Docker
-        uses: JetBrains/writerside-github-action@v4
-        with:
-          instance: ${{ env.INSTANCE }}
-          artifact: ${{ env.ARTIFACT }}
-          docker-version: ${{ env.DOCKER_VERSION }}
+        run: |             	
+          set -x
+          echo "Build documentation script started"
+          export DISPLAY=:99
+          Xvfb :99 &
+          git config --global --add safe.directory .
+          /opt/builder/bin/idea.sh helpbuilderinspect -source-dir . -product ${{ env.INSTANCE }} -fx --runner github -output-dir ./artifacts/ || true
+          echo "Test existing artifacts"
+          test -e ./artifacts/${{ env.ARTIFACT }} && echo ${{ env.ARTIFACT }} exists
 
-      - name: Create file and list directory
+#        uses: JetBrains/writerside-github-action@v4
+#        with:
+#          instance: ${{ env.INSTANCE }}
+#          artifact: ${{ env.ARTIFACT }}
+#          docker-version: ${{ env.DOCKER_VERSION }}
+
+      - name: List artifacts directory
         run: |
-          touch ./artifacts/some-file
           ls -alR ./artifacts
 
       - name: Upload documentation
@@ -56,6 +66,7 @@ jobs:
           path: |
             artifacts/${{ env.ARTIFACT }}
             artifacts/report.json
+            artifacts/xliffSrcAUTO.zip
           retention-days: 7
 
       # Add the step below to upload Algolia indexes
