--- a/Writerside2/writerside.cfg
+++ b/Writerside2/writerside.cfg
@@ -11,5 +11,5 @@
     <images dir="images" web-path="writerside-github"/>
     <instance src="m.tree" web-path="/m/"/>
     <instance src="t.tree" web-path="/t/"/>
-    <instance src="auto.tree" web-path="/" version="1.1"/>
+    <instance src="auto.tree" web-path="" version="1.1"/>
 </ihp>
