--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -27,7 +27,7 @@ env:
   ALGOLIA_INDEX_NAME: index
   ALGOLIA_KEY: ${{ secrets.ALGOLIA_KEY }}
   CONFIG_JSON_PRODUCT: auto
-  CONFIG_JSON_VERSION: 1.2
+  CONFIG_JSON_VERSION: '1.0'
 
 jobs:
   build:
