--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,11 +22,11 @@ env:
   DOCKER_VERSION: '233.14938'
   # Add the variable below to upload Algolia indexes
   # Replace HI with the ID of the instance in capital letters
-  ALGOLIA_ARTIFACT: algolia-indexes-AUTO.zip
-  ALGOLIA_APP_NAME: ERUSDW4898
-  ALGOLIA_INDEX_NAME: index
-  ALGOLIA_KEY: ${{ secrets.ALGOLIA_KEY }}
-  CONFIG_JSON_PRODUCT: auto
+  ALGOLIA_ARTIFACT: 'algolia-indexes-AUTO.zip'
+  ALGOLIA_APP_NAME: 'ERUSDW4898'
+  ALGOLIA_INDEX_NAME: 'index'
+  ALGOLIA_KEY: '${{ secrets.ALGOLIA_KEY }}'
+  CONFIG_JSON_PRODUCT: 'auto'
   CONFIG_JSON_VERSION: '1.0'
 
 jobs:
