--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -37,6 +37,30 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+
+      - name: Processing timestamps
+        run: |
+          git config --global --add safe.directory /__w/siarb.github.io/siarb.github.io
+          mkdir -p ./timestamps
+          echo "{" > ./timestamps/timestamps.json
+          git ls-tree -r --name-only HEAD | grep -E '\.(topic|md)$' | xargs -n 1 -P 4 -I{} bash -c 'echo -e "\"$0\": \"$(git log -1 --format="%at" -- "$0")\","' {} >> ./timestamps/timestamps.json
+          sed -i '$ s/.$//' ./timestamps/timestamps.json
+          echo "}" >> ./timestamps/timestamps.json
+          cat ./timestamps/timestamps.json
+
+      - name: Store timestamps file
+        uses: actions/upload-artifact@v4
+        with:
+          name: timestamps.json
+          path: ./timestamps/timestamps.json
+
+      - name: Download timestamps
+        uses: actions/download-artifact@v4
+        with:
+          name: timestamps.json
+          path: timestamps
 
       - name: Build Writerside docs using Docker
         run: |
@@ -45,7 +69,7 @@ jobs:
           export DISPLAY=:99
           Xvfb :99 &
           git config --global --add safe.directory .
-          /opt/builder/bin/idea.sh helpbuilderinspect -source-dir . -product ${{ env.INSTANCE }} -fx --runner github -output-dir ./artifacts/ -time ./artifacts/timestamps.json || true
+          /opt/builder/bin/idea.sh helpbuilderinspect -source-dir . -product ${{ env.INSTANCE }} -fx --runner github -output-dir ./artifacts/ -time ./timestamps/timestamps.json || true
           echo "Test existing artifacts"
           test -e ./artifacts/${{ env.ARTIFACT }} && echo ${{ env.ARTIFACT }} exists
 #        uses: JetBrains/writerside-github-action@v4
