--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -32,7 +32,7 @@ env:
 jobs:
   build:
     runs-on: ubuntu-latest
-    container: registry.jetbrains.team/p/writerside/builder/writerside-builder:2.1.1808-p5684
+    container: registry.jetbrains.team/p/writerside/builder/writerside-builder:241.15989
 
     steps:
       - name: Checkout repository
