--- a/.github/workflows/slack.yml
+++ b/.github/workflows/slack.yml
@@ -1,6 +1,8 @@
 name: 'Send Slack notification'
 
 on:
+  issue_comment:
+    types: [created]
   issues:
     types: [opened]
   workflow_dispatch:
@@ -9,26 +11,47 @@ jobs:
   send-slack-notification:
     runs-on: ubuntu-latest
     steps:
-      - name: Post to a Slack channel
-        id: slack
+      - name: GitHub issue commented
+        id: slack-comment
         uses: slackapi/slack-github-action@v1.26.0
         with:
-          # Slack channel id, channel name, or user id to post message.
-          # See also: https://api.slack.com/methods/chat.postMessage#channels
-          channel-id: 'C04D1M83BUG'
-          # For posting a rich message using Block Kit
+
+          channel-id: ${{ secrets.SLACK_CHANNEL_ID }}
           payload: |
             {
-              "text": "GitHub Action build result: ${{ job.status }}\n${{ github.event.pull_request.html_url || github.event.head_commit.url }}",
+              "text": "GitHub issue commented",
               "blocks": [
                 {
                   "type": "section",
                   "text": {
                     "type": "mrkdwn",
-                    "text": "GitHub Action build result: ${{ job.status }}\n${{ github.event.pull_request.html_url || github.event.head_commit.url }}"
+                    "text": ":github: User _${{ github.event.comment.user.login }}_ commented issue:\n><${{ github.event.issue.html_url }}|*${{ github.event.issue.title }}*> \n>${{ github.event.comment.body }}"
                   }
                 }
               ]
             }
         env:
           SLACK_BOT_TOKEN: ${{ secrets.SLACK_BOT_TOKEN }}
+        if: github.event_name == 'issue_comment'
+
+      - name: GitHub issue submitted
+        id: slack-opened
+        uses: slackapi/slack-github-action@v1.26.0
+        with:
+          channel-id: ${{ secrets.SLACK_CHANNEL_ID }}
+          payload: |
+            {
+              "text": "GitHub issue submitted",
+              "blocks": [
+                {
+                  "type": "section",
+                  "text": {
+                    "type": "mrkdwn",
+                    "text": ":github: User _${{ github.event.issue.user.login }}_ submitted issue:\n><${{ github.event.issue.html_url }}|*${{ github.event.issue.title }}*> \n>${{ github.event.issue.body }}"
+                  }
+                }
+              ]
+            }
+        env:
+          SLACK_BOT_TOKEN: ${{ secrets.SLACK_BOT_TOKEN }}
+        if: github.event_name == 'issues' && github.event.action == 'opened'
