--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -19,7 +19,7 @@ env:
   # Replace HI with the ID of the instance in capital letters
   ARTIFACT: webHelpAUTO2-all.zip
   # Writerside docker image version
-  DOCKER_VERSION: '241.15989'
+  DOCKER_VERSION: '2.1.1840-p5833'
   # Add the variable below to upload Algolia indexes
   # Replace HI with the ID of the instance in capital letters
   ALGOLIA_ARTIFACT: 'algolia-indexes-AUTO.zip'
