--- a/Writerside2/writerside.cfg
+++ b/Writerside2/writerside.cfg
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE ihp SYSTEM "https://resources.jetbrains.com/writerside/1.0/ihp.dtd">
 
-<ihp version="2.0">
+<ihp version="2.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+     xsi:noNamespaceSchemaLocation="https://resources.jetbrains.com/writerside/1.0/writerside-cfg.xsd">
     <settings>
         <id-generator-method>LOWER_CASE_DASHES_INTERNATIONAL</id-generator-method>
     </settings>
@@ -12,4 +13,5 @@
     <instance src="m.tree" web-path="/m/"/>
     <instance src="t.tree" web-path="/t/"/>
     <instance src="auto.tree" version="1.0"/>
+    <build-config dir="configs"/>
 </ihp>
