--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -19,20 +19,20 @@ env:
   # Replace HI with the ID of the instance in capital letters
   ARTIFACT: webHelpAUTO2-all.zip
   # Writerside docker image version
-  DOCKER_VERSION: '2.1.1891-p6226'
+  DOCKER_VERSION: '2.1.1904-p6349'
   # Add the variable below to upload Algolia indexes
   # Replace HI with the ID of the instance in capital letters
   ALGOLIA_ARTIFACT: 'algolia-indexes-AUTO.zip'
   ALGOLIA_APP_NAME: 'ERUSDW4898'
   ALGOLIA_INDEX_NAME: 'index_test'
   ALGOLIA_KEY: '${{ secrets.ALGOLIA_KEY }}'
-  CONFIG_JSON_PRODUCT: 'auto'
+  CONFIG_JSON_PRODUCT: 'AUTO'
   CONFIG_JSON_VERSION: '1.0'
 
 jobs:
   build:
     runs-on: ubuntu-latest
-    container: registry.jetbrains.team/p/writerside/builder/writerside-builder:2.1.1891-p6226
+    container: registry.jetbrains.team/p/writerside/builder/writerside-builder:2.1.1904-p6349
 
     steps:
       - name: Checkout repository
