--- a/Writerside2/writerside.cfg
+++ b/Writerside2/writerside.cfg
@@ -3,15 +3,16 @@
 
 <ihp version="2.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
      xsi:noNamespaceSchemaLocation="https://resources.jetbrains.com/writerside/1.0/writerside-cfg.xsd">
-    <settings>
-        <id-generator-method>LOWER_CASE_DASHES_INTERNATIONAL</id-generator-method>
-    </settings>
+    <module name="Writerside2"/>
     <topics dir="topics"/>
     <snippets src="snippets"/>
     <images dir="pictures" web-path="writerside-github"/>
     <images dir="images" web-path="writerside-github"/>
     <instance src="m.tree" web-path="/m/"/>
     <instance src="t.tree" web-path="/t/"/>
-    <instance src="auto.tree" version="1.0"/>
+    <instance src="auto.tree"/>
     <build-config dir="configs"/>
+    <settings>
+        <default-property element-name="img" property-name="thumbnail" value="true" />
+    </settings>
 </ihp>
