--- a/Writerside2/writerside.cfg
+++ b/Writerside2/writerside.cfg
@@ -10,7 +10,7 @@
     <images dir="images" web-path="writerside-github"/>
     <instance src="m.tree" web-path="/m/"/>
     <instance src="t.tree" web-path="/t/"/>
-    <instance src="auto.tree"/>
+    <instance src="auto.tree" version="1.1.1.1"/>
     <build-config dir="configs"/>
     <settings>
         <id-generator-method>LOWER_CASE_DASHES_INTERNATIONAL</id-generator-method>
