Test edit button

--- a/Writerside2/writerside.cfg
+++ b/Writerside2/writerside.cfg
@@ -4,7 +4,7 @@
 <ihp version="2.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
      xsi:noNamespaceSchemaLocation="https://resources.jetbrains.com/writerside/1.0/writerside-cfg.xsd">
     <module name="Writerside2"/>
-    <topics dir="topics"/>
+    <topics dir="articles"/>
     <snippets src="snippets"/>
     <images dir="pictures" web-path="writerside-github"/>
     <images dir="images" web-path="writerside-github"/>
