--- a/Writerside2/writerside.cfg
+++ b/Writerside2/writerside.cfg
@@ -13,7 +13,7 @@
     <instance src="auto.tree" version="1.1.1.1"/>
     <build-config dir="configs"/>
     <settings>
-        <id-generator-method>LOWER_CASE_DASHES_INTERNATIONAL</id-generator-method>
+<!--        <id-generator-method>LOWER_CASE_DASHES_INTERNATIONAL</id-generator-method>-->
 <!--        <default-property element-name="img" property-name="thumbnail" value="true" />-->
     </settings>
 </ihp>
